--- a/dist.ini
+++ b/dist.ini
@@ -9,7 +9,7 @@ name=Tree-Object
 perl=5.010001
 strict=0
 warnings=0
-Role::Tiny::Tree::NodeMethods=0
+Role::TinyCommons::Tree::NodeMethods=0.06
 Role::Tiny::With=0
 
 [Prereqs / TestRequires]
