[dist] Add missing dep to Class::Build::Array::Glob [RT#113409]

--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,8 @@ name=Tree-Object
 perl=5.010001
 strict=0
 warnings=0
+;!lint_prereqs assume-used "undetected, used via eval"
+Class::Build::Array::Glob=0
 Role::Tiny::With=0
 Role::TinyCommons::Tree::NodeMethods=0.06
 
