--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.04
+version=0.05
 
 name=Tree-Object
 
@@ -12,7 +12,9 @@ perl=5.010001
 strict=0
 warnings=0
 ;!lint_prereqs assume-used "undetected, used via eval"
-Class::Build::Array::Glob=0
+Class::Accessor::Array=0
+;!lint_prereqs assume-used "undetected, used via eval"
+Class::Accessor::Array::Glob=0
 Role::Tiny::With=0
 Role::TinyCommons::Tree::NodeMethods=0.06
 
