--- a/dist.ini
+++ b/dist.ini
@@ -15,6 +15,7 @@ warnings=0
 Class::Accessor::Array=0
 ;!lint_prereqs assume-used "undetected, used via eval"
 Class::Accessor::Array::Glob=0
+Class::InsideOut=0
 Role::Tiny::With=0
 Role::TinyCommons::Tree::NodeMethods=0.06
 
