--- a/dist.ini
+++ b/dist.ini
@@ -1,3 +1,9 @@
+;---------------------------------
+author  = perlancar <perlancar@cpan.org>
+copyright_holder = perlancar <perlancar@cpan.org>
+license = Perl_5
+;---------------------------------
+
 version=0.07
 
 name=Tree-Object
@@ -5,19 +11,19 @@ name=Tree-Object
 [InsertModulesList]
 
 [@Author::PERLANCAR]
+:version=0.605
 
-:version=0.58
 [Prereqs]
 perl=5.010001
 strict=0
 warnings=0
 ;!lint_prereqs assume-used "undetected, used via eval"
-Class::Accessor::Array=0
+Class::Accessor::Array=0.031
 ;!lint_prereqs assume-used "undetected, used via eval"
 Class::Accessor::Array::Glob=0
 Class::InsideOut=0
 Role::Tiny::With=0
-Role::TinyCommons::Tree::NodeMethods=0.06
+Role::TinyCommons::Tree::NodeMethods=0.127
 
 [Prereqs / TestRequires]
 lib=0
